--- a/catalogue/cmip6/NCAR-CESM2-ScenarioMIP-r10i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/NCAR-CESM2-ScenarioMIP-r10i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
@@ -34,11 +34,11 @@ steps:
         #"hfss",
         #"hurs",
         #"huss",
-        #"rlus",
-        #"rsus",
-        #"rlut",
-        #"rlds",
-        #"rsds",
+        "rlus",
+        "rsus",
+        "rlut",
+        "rlds",
+        "rsds",
       ]
     concat_dims: experiment_id
     esgpull_path: /data/esgpull
