--- a/catalogue/cmip6/NCC-NorESM2-MM-historical-r1i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/NCC-NorESM2-MM-historical-r1i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
@@ -5,6 +5,7 @@ steps:
     download: true
     check_files: false
     retries: 3
+    drop_attributes: [ "contact", "further_info_url" ]
     filename_or_obj:
       "project": CMIP6
       #"data_node": esgf3.dkrz.de
@@ -41,7 +42,7 @@ steps:
     index_node: esgf.ceda.ac.uk
   chunks: {time: 720, lat: 32, lon: 72}
   to_zarr_kwargs: {
-    store: s3://edh-root/cmip6/NCC-NorESM2-MM-historical-r1i1p1f1-day-gn-v0-test.zarr,
+    store: s3://edh-root/cmip6/NCC-NorESM2-MM-historical-r1i1p1f1-day-gn-v0.zarr,
     storage_options: {
       client_kwargs: { endpoint_url: https://s3.gra.io.cloud.ovh.net }
     }
