--- a/catalogue/era5/era5-land-daily/ingestion/ingestion-steps-update-accum.yaml
+++ b/catalogue/era5/era5-land-daily/ingestion/ingestion-steps-update-accum.yaml
@@ -8,28 +8,26 @@ steps:
     chunks_per_processing_batch: 8
   chunks: {valid_time: 75, latitude: 150, longitude: 300}
   to_zarr_kwargs:
-    store: s3://edc-era5/era5-land-daily-utc-v1.zarr
+    store: s3://edc-era5/era5-land-daily-utc-v1-update.zarr
     write_empty_chunks: false
   transform_kwargs:
     data_vars:
-    - d2m
     - e
     - pev
     - ro
-    - sp
     - ssr
     - ssrd
     - str
-    - swvl1
-    - swvl2
-    - t2m
     - tp
-    - u10
-    - v10
     drop_vars:
     - depthBelowLandLayer
     - number
     - surface
-    resample_kwargs:
-      indexer:
-        valid_time: D
+    isel:
+      valid_time:
+        slice: [null, null, 24]
+    # shift:
+    #  valid_time: -1
+    # resample_kwargs:
+    #   indexer:
+    #     valid_time: D
