--- a/catalogue/cmip6/IPSL-CM6A-LR-ScenarioMIP-r1i1p1f1-day-gr/ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/IPSL-CM6A-LR-ScenarioMIP-r1i1p1f1-day-gr/ingestion/ingest-from-esgf-v0.yaml
@@ -6,6 +6,7 @@ steps:
     check_files: false
     retries: 3
     drop_variables: type
+    drop_attributes: [ "contact", "further_info_url" ]
     sel:
       time:
         slice: [ "2000", "2100" ]
@@ -13,7 +14,7 @@ steps:
       "project": CMIP6
       "activity_id": ScenarioMIP
       #"data_node": esgf3.dkrz.de
-      #"data_node": vesg.ipsl.upmc.fr
+      "data_node": vesg.ipsl.upmc.fr
       "institution_id": IPSL
       "source_id": IPSL-CM6A-LR
       "experiment_id": [
