--- a/catalogue/cmip6/NCC-NorESM2-MM-ScenarioMIP-r1i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/NCC-NorESM2-MM-ScenarioMIP-r1i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
@@ -5,6 +5,7 @@ steps:
     download: true
     check_files: false
     retries: 3
+    drop_attributes: [ "contact" ]
     filename_or_obj:
       "project": CMIP6
       "activity_id": ScenarioMIP
@@ -18,7 +19,7 @@ steps:
       "variant_label": r1i1p1f1
       "grid_label": gn
       "variable_id": [
-        "areacella"
+        "areacella",
         "sftlf",
 
         "clt",
