--- a/catalogue/cmip6/IPSL-CM6A-LR-ScenarioMIP-r1i1p1f1-day-gr/ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/IPSL-CM6A-LR-ScenarioMIP-r1i1p1f1-day-gr/ingestion/ingest-from-esgf-v0.yaml
@@ -6,7 +6,7 @@ steps:
     check_files: false
     retries: 3
     drop_variables: type
-    drop_attributes: [ "contact", "further_info_url" ]
+    drop_attributes: [ "contact"]
     sel:
       time:
         slice: [ "2000", "2100" ]
