--- a/catalogue/cmip6/EC-Earth3-CC-ScenarioMIP-r1i1p1f1-day-gr/ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/EC-Earth3-CC-ScenarioMIP-r1i1p1f1-day-gr/ingestion/ingest-from-esgf-v0.yaml
@@ -5,6 +5,7 @@ steps:
     download: true
     check_files: false
     retries: 3
+    drop_attributes: [ "contact" ]
     filename_or_obj:
       "project": CMIP6
       "activity_id": ScenarioMIP
