Edit ingeEC-Earth3-CC-ScenarioMIP ingestion file

--- a/catalogue/cmip6/EC-Earth3-CC-ScenarioMIP-r1i1p1f1-day-gr/ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/EC-Earth3-CC-ScenarioMIP-r1i1p1f1-day-gr/ingestion/ingest-from-esgf-v0.yaml
@@ -20,10 +20,7 @@ steps:
       "grid_label": gr
       "variable_id": [
         "areacella",
-
         "sfcWindmax",
-        "sfcWind",
-        "rsus",
         "prsn",
         "hfss",
         "hfls",
@@ -40,7 +37,10 @@ steps:
         "rsds",
         "rlut",
         "rlus",
-        "rlds"
+        "rlds",
+
+        #"sfcWind",
+        #"rsus",
       ]
     concat_dims: experiment_id
     esgpull_path: /data/esgpull
