Do not show in searches

--- a/catalogue/derived-GPWv4-Histsoc/__collection__.yaml
+++ b/catalogue/derived-GPWv4-Histsoc/__collection__.yaml
@@ -1,4 +1,4 @@
-edh:maturity: published
+edh:maturity: draft
 title: Gridded demographic data
 dc:abstract:
   This is a hybrid gridded dataset of demographic data for the world, given as 5-year population
